rasaM2K/myproject/deploy/yamls/actions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: actions
  name: actions
spec:
  replicas: 1
  selector:
    matchLabels:
      move2kube.konveyor.io/service: actions
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: actions
      name: actions
    spec:
      containers:
        - image: index.docker.io/tomjacobseu/actions:latest
          imagePullPolicy: Always
          name: action-server
          ports:
            - containerPort: 5055
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /app/actions
              name: vol15225444717140246429
      restartPolicy: Always
      securityContext: {}
      volumes:
        - name: vol15225444717140246429
          persistentVolumeClaim:
            claimName: vol15225444717140246429
status: {}
