rasaM2K/myproject/deploy/yamls/rasa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: rasa
  name: rasa
spec:
  replicas: 1
  selector:
    matchLabels:
      move2kube.konveyor.io/service: rasa
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: rasa
      name: rasa
    spec:
      containers:
        - image: index.docker.io/tomjacobseu/rasa:latest
          imagePullPolicy: Always
          name: rasa-server
          ports:
            - containerPort: 5005
              protocol: TCP
          resources: {}
      restartPolicy: Always
      securityContext: {}
status: {}
