rasaM2K/myproject/deploy/yamls/actions-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: actions
  name: actions
spec:
  ports:
    - name: port-5055
      port: 5055
      targetPort: 5055
  selector:
    move2kube.konveyor.io/service: actions
  type: ClusterIP
status:
  loadBalancer: {}
