rasaM2K/myproject/deploy/yamls/chatbotui-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: chatbotui
  name: chatbotui
spec:
  ports:
    - name: port-3000
      port: 3000
      targetPort: 3000
  selector:
    move2kube.konveyor.io/service: chatbotui
  type: ClusterIP
status:
  loadBalancer: {}
