rasaM2K/myproject/deploy/yamls/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: mysql
  name: mysql
spec:
  ports:
    - name: port-3306
      port: 3306
      targetPort: 3306
  selector:
    move2kube.konveyor.io/service: mysql
  type: ClusterIP
status:
  loadBalancer: {}
