rasaM2K/myproject/deploy/yamls/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: nginx
  name: nginx
spec:
  ports:
    - name: port-80
      port: 80
      targetPort: 80
  selector:
    move2kube.konveyor.io/service: nginx
  type: ClusterIP
status:
  loadBalancer: {}
